ferric/tests/ui/syntax_err_01.stderr
error: expected `mod`
 --> tests/ui/syntax_err_01.rs:5:5
  |
5 |     modu grass;
  |     ^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `grass`
  --> tests/ui/syntax_err_01.rs:30:18
   |
30 |     let _model = grass::Model { grass_wet: true };
   |                  ^^^^^ use of undeclared crate or module `grass`
